--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 </head>
 <body>
-	<canvas>This is a canvas</canvas>
+	<canvas></canvas>
 	<script src="canvas.js"></script>
 </body>
 </html>
